--- a/static/index.css
+++ b/static/index.css
@@ -26,15 +26,14 @@ body, html {
     position: relative;
 }
 
-/* Стили для надписи Folder name */
-.folder-name {
+.data-file-name {
     font-size: 18px;
     color: #333;
     display: flex;
     align-items: center;
 }
 
-.folder-name span:first-child {
+.data-file-name span:first-child {
     font-weight: bold;
 }
 
@@ -52,7 +51,7 @@ body, html {
 }
 
 /* Информация о файле */
-.file-info {
+.img-file-info {
     display: flex;
     justify-content: right;
     align-items: center;
@@ -60,7 +59,7 @@ body, html {
 }
 
 /* Название файла */
-.file-name {
+.img-file-name {
     font-size: 16px;
     color: #555;
     font-weight: bold;
