--- a/static/index.css
+++ b/static/index.css
@@ -42,6 +42,10 @@ body, html {
     color: #007bff;
     cursor: pointer;
     transition: all 0.3s;
+
+    background: none;
+    border: none;
+    padding: 0;  
 }
 
 /* Подсветка при наведении */
